# PySwiftKitDemoPlugin

./: .gitignore  404.html  KvToPyClass  Package.resolved  Package.swift  README.md  TYPE_CONVERSIONS.md  WebKitMonacoWasm.md  build-all.sh  build-datamodel.sh  build-kv-ast-tree.sh  build-kv-datamodel-demo.sh  build-kv-swiftui-demo.sh  build-kv-to-pyclass.sh  build-pyswiftkit.sh  build-python-to-swift.sh  build-swift-to-python.sh  build.sh  index.html  kv-datamodel.md  main-plan.md  mkdocs.yml  py2pyswiftkit.md  pyproject.toml  pyswift-datamodels.md  search.html  test-properties.swift  test_wasm.html
KvLangTester/: pyproject.toml
KvToPyClassVsCode/: CHANGELOG.md  DEVELOPMENT.md  Dockerfile.vnc  Dockerfile.vnc-multi  KIVY_RELOADER_INTEGRATION.md  Package.resolved  Package.swift  QUICKSTART.md  README-VNC.md  README.md  RENDER_PREVIEW.md  STREAMING_XORG_TO_VSCODE.md  build-wasm.sh  docker-compose.vnc-multi.yml  docker-compose.vnc.yml  package-lock.json  package.json  run-on-display.sh  start-vnc-multi.sh  start-vnc.sh  test-kivy-app2.py  test.kv
KvToPyClassVsCode/kv_projs/KvTestsOne/: kivy-reloader.toml  pyproject.toml
KvToPyClassVsCode/kv_projs/KvTestsOne/src/kvtestsone/: __main__.py  app.py  my.kv
Sources/: CompletionProvider.swift  Main.swift  MonacoEditor.swift  SwiftCompletions.swift  SwiftParser.swift
demo/: PySwiftKitDemo.js  index.html  index.js  instantiate.js  kv-swiftui.html  package.json
docs/: demo.md  index.md  kv-ast-tree.md  kv-datamodel.md  kv-swiftui.md  kv-to-pyclass.md  python-datamodel.md  python-to-swift.md  swift-to-python.md
kv-ast-tree/: index.js  instantiate.js  package.json
kv-datamodel/: index.js  instantiate.js
kv-swiftui/: index.js  instantiate.js  package.json
(+93 files in other folders)
